--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body{
 
 .header{
 	padding: 170px 30px 80px;
+	cursor: default;
 }
 
 .site-title-sub{
@@ -44,4 +45,89 @@ body{
 .site-title{
 	margin: 50px 0 40px;
 	font-size: 7.6rem;
+}
+
+.site-description{
+	margin-bottom: 50px;
+	color: #888;
+	font-size: 1.6rem;
+}
+
+.button{
+	display: inline-block;
+	text-decoration: none;
+	width: 200px;
+	padding: 20px;
+	border-radius: 4px;
+	background-color: #afa58d;
+	color: #fff;
+	letter-spacing: 1px;
+	font-size: 1.2rem;
+	transition: all 0.8s;
+}
+
+.button:hover{
+	opacity: 0.7;
+}
+
+.button-showy{
+	background-color: #f1b400;
+}
+
+.buttons .button{
+	margin: 10px;
+}
+
+.about{
+	padding: 80px 30px;
+	background-color: #fff;
+	color: #333;
+}
+
+.heading{
+	position: relative;
+	margin: 30px 0 15px; 
+	letter-spacing: 2px;
+	font-size: 4rem;
+	display: inline-block;
+	padding-bottom: 15px;
+}
+
+.heading::before, .heading::after{
+	content: '';
+	position: absolute;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	border-bottom: 1px solid #999;
+}
+
+.heading::before{
+	bottom: 5px;
+}
+
+.about-text{
+	margin: 30px 0; 
+	line-height: 2.5;
+}
+
+.works{
+	background-color: #383634;
+	padding: 80px 0;
+}
+
+.works-wrapper{
+	display: table;
+	width: 100%;
+	margin-top: 60px;
+	table-layout: fixed;
+}
+
+.work-box{
+	display: table-cell;
+}
+
+.work-image{
+	display: block;
+	width: 100%;
 }
